@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: PseudoTerminal.h,v 1.30 2003-01-21 08:14:40 ujwal Exp $
+// $Id: PseudoTerminal.h,v 1.31 2003-01-27 23:05:15 ujwal Exp $
 //
 //  PseudoTerminal.h
 //  JTerminal
@@ -172,14 +172,9 @@
 
 @interface PseudoTerminal (Private)
 
-- (void) _buildAddressBookMenu: (NSMenu *) abMenu newWindow: (BOOL) newWinFlag;
 - (void) _buildToolbarItemPopUpMenu: (NSToolbarItem *) toolbarItem;
 - (void) _reloadAddressBookMenu: (NSNotification *) aNotification;
 - (void) _toggleNewWindowState: (id) sender;
-- (void) _executeABMenuCommandInNewTab: (id) sender;
-- (void) _executeABMenuCommandInNewWindow: (id) sender;
-- (void) _executeABMenuCommand: (int) commandIndex newWindow: (BOOL) theFlag;
-
 
 @end
 
